<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="movieDetailsViewModel"
            type="com.example.moviesapp.viewmodel.MovieDetailsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MovieDetailActivity">


            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                app:imageUrl="@{@string/image_url(movieDetailsViewModel.movie.backdrop_path)}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="32dp"
                android:gravity="center_horizontal"
                android:text="@{movieDetailsViewModel.movie.title}"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@id/movie_poster"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/btn_circle_play"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/play"
                android:scaleType="fitCenter"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--<ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="190dp"
                android:layout_marginEnd="32dp"
                android:background="@color/yellow700"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>-->

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@{movieDetailsViewModel.movie.vote_average.toString()}"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_poster" />

            <TextView
                android:id="@+id/movie_title_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/overview"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/gray600"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_rating" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:paddingEnd="8dp"
                android:text="@{movieDetailsViewModel.movie.overview}"
                android:textAppearance="?attr/textAppearanceBody2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_title_overview" />

            <LinearLayout
                android:id="@+id/linear_layout_bdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_overview">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/budget" />

                    <TextView
                        android:id="@+id/movie_budget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:text="@{@string/budget_value(movieDetailsViewModel.movie.budget.toString())}"
                        android:textColor="@color/yellow700"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/duration" />

                    <TextView
                        android:id="@+id/movie_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:text="@{@string/duration_value(movieDetailsViewModel.movie.runtime.toString())}"
                        android:textColor="@color/yellow700"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date" />

                    <TextView
                        android:id="@+id/movie_release_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:text="@{movieDetailsViewModel.movie.release_date.toString()}"
                        android:textColor="@color/yellow700"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_layout_genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_bdr">

                <TextView
                    android:id="@+id/movie_genres_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/genres" />


                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group_genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_cast"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_genres"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <TextView
                    android:id="@+id/movie_casts_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/cast" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_cast"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    listCast="@{movieDetailsViewModel.casts}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_similar_movie"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_cast">

                <TextView
                    android:id="@+id/similar_movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="SIMILAR" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_similar_movie"
                    listData="@{movieDetailsViewModel.similarMovies}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_movie"/>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>